# protheses

./: .gitignore  README.md
doc/: DEVLOG  INSTALL
media/: bras_organique3108.material  coeur_scene_3008bras.mesh  coeur_scene_3008bras.skeleton
meshviewer/: BaseApplication.cpp  CMakeLists.txt  Makefile  MeshViewerApplication.cpp  MeshViewerApplication.h
meshviewer/media/models/: Coeur_I..material  Coeur_I..skeleton  bras_sans_smooth_III_2308..material  subtool1.skeleton
mirror/: BaseApplication.cpp  CMakeLists.txt  MirrorApplication.cpp  MirrorApplication.h  NiSimpleSkeleton.cpp  fader.h  infoviz.cpp  infoviz.cpp.autosave  infoviz.h  pointcloud.cpp  pointcloud.h  pointcloud.material  prosthesis.cpp  prosthesis.h
mirror/Data/: SamplesConfig.xml
mirror/cfg/: ogre.cfg  resources.cfg  scenario.cfg
mirror/media/materials/scripts/: Pointcloud.material  infoviz.material
mirror/media/models/: bras_sans_smooth_III_2308..mesh  bras_sans_smooth_III_2308..skeleton  coeur_scene_3008Hose001.material  coeur_scene_3008Hose001.mesh  coeur_scene_3008Hose001.skeleton  coeur_scene_3008bras.material  coeur_scene_3008bras.mesh
